--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
